# hack

./: README.md  meson.build  run
index/: index.hpp  meson.build
src/: meson.build
src/concepts/: concepts.hpp  meson.build
src/container/: container.cpp  container.hpp  meson.build
src/iterators/: associative_ostream_iterator.hpp  meson.build  sequence_ostream_iterator.hpp
src/logger/: logger.cpp  logger.hpp  meson.build
src/math/: matrix.hpp  meson.build  vector.hpp
src/matrix/: matrix.hpp  meson.build
src/range/: meson.build  range.cpp  range.hpp
src/string/: meson.build  string.cpp  string.hpp  string_concat_helper.hpp
src/utils/: meson.build  utils.hpp
src/vector/: meson.build  vector.hpp
src/view/: color.hpp  meson.build
tests/: container.cpp  math.cpp  meson.build  range.cpp  split_str.cpp  string.cpp
